@@ -1747,6 +1747,7 @@ script_variable variable_list[]=
 	{"LOADMAPDATA", LOADMAPDATA, 0, 0 },
 	{"LWPNPARENT", LWPNPARENT, 0, 0 },
 	{"LWPNLEVEL", LWPNLEVEL, 0, 0 },
+	{"EWPNLEVEL", EWPNLEVEL, 0, 0 },
 	{"EWPNPARENT", EWPNPARENT, 0, 0 },
 	{"NPCPARENTUID", NPCPARENTUID, 0, 0 },
 	
