@@ -1176,8 +1176,9 @@
 #define SPRITEMAXITEM		1104
 #define SPRITEMAXPARTICLE	1105
 #define SPRITEMAXDECO		1106
+#define EWPNLEVEL		1107
 
-#define LAST_BYTECODE 		1107
+#define LAST_BYTECODE 		1108
 
 //END OF BYTECODE
 
