@@ -7371,6 +7371,8 @@ EnemyWeaponSymbols EnemyWeaponSymbols::singleton = EnemyWeaponSymbols();
 static AccessorTable ewpnTable[] =
 {
 //	  name,                     rettype,                  setorget,     var,                  numindex,      funcFlags,                            numParams,   params
+	{ "getLevel",                   ZVARTYPEID_FLOAT,         GETTER,       EWPNLEVEL,                1,             0,                                    1,           {  ZVARTYPEID_EWPN,          -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
+	{ "setLevel",                   ZVARTYPEID_VOID,          SETTER,       EWPNLEVEL,                1,             0,                                    2,           {  ZVARTYPEID_EWPN,           ZVARTYPEID_FLOAT,        -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
 	{ "getX",                   ZVARTYPEID_FLOAT,         GETTER,       EWPNX,                1,             0,                                    1,           {  ZVARTYPEID_EWPN,          -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
 	{ "setX",                   ZVARTYPEID_VOID,          SETTER,       EWPNX,                1,             0,                                    2,           {  ZVARTYPEID_EWPN,           ZVARTYPEID_FLOAT,        -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
 	{ "getMax",                   ZVARTYPEID_FLOAT,         GETTER,       SPRITEMAXEWPN,                1,             0,                                    1,           {  ZVARTYPEID_EWPN,          -1,                               -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1,                           -1                           } },
